crates/service/tests/diagnostics/snapshots/features__diagnostics__type_misuse__array_copy.snap
---
source: crates/service/tests/diagnostics/type_misuse.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 12,
          "character": 4
        },
        "end": {
          "line": 12,
          "character": 30
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null $struct), i32, (ref null $struct), i32, i32], found [(ref $dst_array), i32, (ref $src_array), i32, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 9,
                "character": 4
              },
              "end": {
                "line": 9,
                "character": 15
              }
            }
          },
          "message": "expected type `(ref null $struct)`, found `(ref $src_array)`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 7,
                "character": 4
              },
              "end": {
                "line": 7,
                "character": 15
              }
            }
          },
          "message": "expected type `(ref null $struct)`, found `(ref $dst_array)`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 19,
          "character": 4
        },
        "end": {
          "line": 19,
          "character": 26
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null $func), i32, (ref null $func), i32, i32], found [(ref $dst_array), i32, (ref $src_array), i32, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 16,
                "character": 4
              },
              "end": {
                "line": 16,
                "character": 15
              }
            }
          },
          "message": "expected type `(ref null $func)`, found `(ref $src_array)`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 14,
                "character": 4
              },
              "end": {
                "line": 14,
                "character": 15
              }
            }
          },
          "message": "expected type `(ref null $func)`, found `(ref $dst_array)`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 12,
          "character": 15
        },
        "end": {
          "line": 12,
          "character": 22
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "expected type is array, but type of `$struct` is struct",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 2
              },
              "end": {
                "line": 3,
                "character": 25
              }
            }
          },
          "message": "struct type defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 12,
          "character": 23
        },
        "end": {
          "line": 12,
          "character": 30
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "expected type is array, but type of `$struct` is struct",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 2
              },
              "end": {
                "line": 3,
                "character": 25
              }
            }
          },
          "message": "struct type defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 19,
          "character": 15
        },
        "end": {
          "line": 19,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "expected type is array, but type of `$func` is func",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 2
              },
              "end": {
                "line": 2,
                "character": 21
              }
            }
          },
          "message": "func type defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 19,
          "character": 21
        },
        "end": {
          "line": 19,
          "character": 26
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "expected type is array, but type of `$func` is func",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 2
              },
              "end": {
                "line": 2,
                "character": 21
              }
            }
          },
          "message": "func type defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 26,
          "character": 4
        },
        "end": {
          "line": 26,
          "character": 36
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "source array type `$src_array` doesn't match destination array type `$dst_array`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 4,
                "character": 2
              },
              "end": {
                "line": 4,
                "character": 37
              }
            }
          },
          "message": "destination array type defined here"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 5,
                "character": 2
              },
              "end": {
                "line": 5,
                "character": 31
              }
            }
          },
          "message": "source array type defined here"
        }
      ]
    }
  ]
}
