crates/service/tests/diagnostics/snapshots/features__diagnostics__type_misuse__br_on_cast_fail.snap
---
source: crates/service/tests/diagnostics/type_misuse.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 35
        },
        "end": {
          "line": 5,
          "character": 48
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "ref type `(ref null $t)` doesn't match the ref type `(ref any)`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 5,
                "character": 25
              },
              "end": {
                "line": 5,
                "character": 34
              }
            }
          },
          "message": "should match this ref type"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 10,
          "character": 6
        },
        "end": {
          "line": 11,
          "character": 22
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "ref type `(ref null any)` doesn't match the ref type `(ref any)`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 10,
                "character": 23
              },
              "end": {
                "line": 10,
                "character": 24
              }
            }
          },
          "message": "the type difference between those two ref types should match the last ref type in the result type of this label"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 14,
          "character": 29
        },
        "end": {
          "line": 14,
          "character": 35
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "ref type `(ref null any)` doesn't match the ref type `(ref null eq)`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 14,
                "character": 23
              },
              "end": {
                "line": 14,
                "character": 28
              }
            }
          },
          "message": "should match this ref type"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 17,
          "character": 33
        },
        "end": {
          "line": 17,
          "character": 41
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "ref type `(ref null array)` doesn't match the ref type `(ref null struct)`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 17,
                "character": 23
              },
              "end": {
                "line": 17,
                "character": 32
              }
            }
          },
          "message": "should match this ref type"
        }
      ]
    }
  ]
}
