crates/service/tests/diagnostics/snapshots/features__diagnostics__type_misuse__func.snap
---
source: crates/service/tests/diagnostics/type_misuse.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 12,
          "character": 4
        },
        "end": {
          "line": 12,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null $struct)], found [(ref $func)]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 11,
                "character": 4
              },
              "end": {
                "line": 11,
                "character": 15
              }
            }
          },
          "message": "expected type `(ref null $struct)`, found `(ref $func)`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 14,
          "character": 4
        },
        "end": {
          "line": 14,
          "character": 26
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null $array)], found [(ref $func)]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 13,
                "character": 4
              },
              "end": {
                "line": 13,
                "character": 15
              }
            }
          },
          "message": "expected type `(ref null $array)`, found `(ref $func)`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 12,
          "character": 13
        },
        "end": {
          "line": 12,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "expected type is func, but type of `$struct` is struct",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 2
              },
              "end": {
                "line": 3,
                "character": 37
              }
            }
          },
          "message": "struct type defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 14,
          "character": 20
        },
        "end": {
          "line": 14,
          "character": 26
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "expected type is func, but type of `$array` is array",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 4,
                "character": 2
              },
              "end": {
                "line": 4,
                "character": 33
              }
            }
          },
          "message": "array type defined here"
        }
      ]
    }
  ]
}
