crates/service/tests/diagnostics/snapshots/features__diagnostics__type_misuse__structs.snap
---
source: crates/service/tests/diagnostics/type_misuse.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 13,
          "character": 4
        },
        "end": {
          "line": 13,
          "character": 22
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null $func)], found [(ref $struct)]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 12,
                "character": 4
              },
              "end": {
                "line": 12,
                "character": 15
              }
            }
          },
          "message": "expected type `(ref null $func)`, found `(ref $struct)`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 14,
          "character": 4
        },
        "end": {
          "line": 14,
          "character": 23
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null $array), any], found [(ref $struct), any]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 11,
                "character": 4
              },
              "end": {
                "line": 11,
                "character": 15
              }
            }
          },
          "message": "expected type `(ref null $array)`, found `(ref $struct)`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 13,
          "character": 15
        },
        "end": {
          "line": 13,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "expected type is struct, but type of `$func` is func",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 2
              },
              "end": {
                "line": 2,
                "character": 21
              }
            }
          },
          "message": "func type defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 14,
          "character": 15
        },
        "end": {
          "line": 14,
          "character": 21
        }
      },
      "severity": 1,
      "code": "type-misuse",
      "source": "wat",
      "message": "expected type is struct, but type of `$array` is array",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 4,
                "character": 2
              },
              "end": {
                "line": 4,
                "character": 27
              }
            }
          },
          "message": "array type defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 13,
          "character": 21
        },
        "end": {
          "line": 13,
          "character": 22
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find field `0` in this scope"
    },
    {
      "range": {
        "start": {
          "line": 14,
          "character": 22
        },
        "end": {
          "line": 14,
          "character": 23
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find field `0` in this scope"
    }
  ]
}
